--- a/all_items.ipynb
+++ b/all_items.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -236,6 +236,8 @@
          "hovertemplate": "Country=%{location}<br>Count=%{z}<extra></extra>",
          "locationmode": "country names",
          "locations": [
+          "United Kingdom",
+          "Ukraine",
           "Australia",
           "Germany",
           "Sweden",
@@ -257,7 +259,6 @@
           "South Sudan",
           "Uganda",
           "Sri Lanka",
-          "Ukraine",
           "Ireland",
           "Iraq",
           "Serbia",
@@ -273,7 +274,6 @@
           "Spain",
           "Libya",
           "South Africa",
-          "United Kingdom",
           "Bulgaria",
           "Austria",
           "Slovakia",
@@ -315,7 +315,9 @@
          "name": "",
          "type": "choropleth",
          "z": [
-          21,
+          6,
+          91,
+          22,
           28,
           5,
           21,
@@ -336,7 +338,6 @@
           3,
           2,
           3,
-          90,
           14,
           17,
           3,
@@ -351,7 +352,6 @@
           5,
           4,
           1,
-          5,
           5,
           1,
           6,
@@ -1298,7 +1298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1340,7 +1340,7 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Ukraine</td>\n",
-       "      <td>90</td>\n",
+       "      <td>91</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1359,22 +1359,22 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>70</th>\n",
-       "      <td>Bulgaria</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>71</th>\n",
        "      <td>Libya</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>72</th>\n",
+       "      <th>71</th>\n",
        "      <td>North Macedonia</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>73</th>\n",
+       "      <th>72</th>\n",
        "      <td>Bangladesh</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>73</th>\n",
+       "      <td>Angola</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1391,20 +1391,20 @@
        "            Country  Count\n",
        "0                UK    204\n",
        "1     United States    174\n",
-       "2           Ukraine     90\n",
+       "2           Ukraine     91\n",
        "3            Russia     62\n",
        "4            Israel     30\n",
        "..              ...    ...\n",
-       "70         Bulgaria      1\n",
-       "71            Libya      1\n",
-       "72  North Macedonia      1\n",
-       "73       Bangladesh      1\n",
+       "70            Libya      1\n",
+       "71  North Macedonia      1\n",
+       "72       Bangladesh      1\n",
+       "73           Angola      1\n",
        "74          Albania      1\n",
        "\n",
        "[75 rows x 2 columns]"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1416,7 +1416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1442,49 +1442,49 @@
           "Japan",
           "Iraq",
           "Canada",
-          "Ireland",
           "Oman",
-          "France",
+          "Ireland",
           "India",
+          "France",
           "China",
           "New Zealand",
-          "Egypt",
           "Turkey",
-          "Austria",
-          "Cyprus",
+          "Egypt",
           "Cuba",
           "Brazil",
+          "Cyprus",
+          "Austria",
           "Pakistan",
+          "United Kingdom",
           "Afghanistan",
           "South Africa",
-          "United Kingdom",
           "Sweden",
           "Spain",
           "Denmark",
           "Serbia",
-          "South Sudan",
-          "Italy",
+          "Sri Lanka",
           "Nigeria",
           "Niger",
           "Slovakia",
           "Greece",
           "Sudan",
-          "Sri Lanka",
-          "Singapore",
+          "South Sudan",
           "Mali",
+          "Singapore",
+          "Italy",
+          "Finland",
+          "Argentina",
           "Norway",
           "Uganda",
-          "Argentina",
-          "Romania",
           "Colombia",
+          "Romania",
           "Belgium",
-          "Finland",
-          "Algeria",
           "Uruguay",
-          "Hong Kong",
-          "Georgia",
           "Morocco",
+          "Algeria",
+          "Georgia",
           "Netherlands",
+          "Hong Kong",
           "Myanmar",
           "Philippines",
           "Gibraltar",
@@ -1496,7 +1496,6 @@
           "Indonesia",
           "Latvia",
           "Poland",
-          "Angola",
           "Dominican Republic",
           "Dominica",
           "Antarctica",
@@ -1506,6 +1505,7 @@
           "Libya",
           "North Macedonia",
           "Bangladesh",
+          "Angola",
           "Albania"
          ],
          "name": "",
@@ -1513,11 +1513,11 @@
          "z": [
           204,
           174,
-          90,
+          91,
           62,
           30,
           28,
-          21,
+          22,
           21,
           17,
           14,
@@ -1534,7 +1534,7 @@
           6,
           6,
           6,
-          5,
+          6,
           5,
           5,
           5,
@@ -2494,7 +2494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2511,7 +2511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2523,7 +2523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -2564,7 +2564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2585,7 +2585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2599,7 +2599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2611,7 +2611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -2643,12 +2643,12 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>USA</td>\n",
-       "      <td>372</td>\n",
+       "      <td>375</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>UK</td>\n",
-       "      <td>278</td>\n",
+       "      <td>279</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -2658,7 +2658,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Ukraine</td>\n",
-       "      <td>151</td>\n",
+       "      <td>152</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -2693,12 +2693,12 @@
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>China</td>\n",
-       "      <td>35</td>\n",
+       "      <td>36</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
        "      <td>Australia</td>\n",
-       "      <td>25</td>\n",
+       "      <td>26</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
@@ -2707,12 +2707,12 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
-       "      <td>Turkey</td>\n",
+       "      <td>Iran</td>\n",
        "      <td>21</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
-       "      <td>Japan</td>\n",
+       "      <td>Turkey</td>\n",
        "      <td>21</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -2721,24 +2721,24 @@
       ],
       "text/plain": [
        "          GPE  count\n",
-       "0         USA    372\n",
-       "1          UK    278\n",
+       "0         USA    375\n",
+       "1          UK    279\n",
        "2      Russia    185\n",
-       "3     Ukraine    151\n",
+       "3     Ukraine    152\n",
        "4     Germany     67\n",
        "5      Israel     42\n",
        "6        Iraq     41\n",
        "7      London     39\n",
        "8      Canada     36\n",
        "9      France     36\n",
-       "10      China     35\n",
-       "11  Australia     25\n",
+       "10      China     36\n",
+       "11  Australia     26\n",
        "12     Moscow     24\n",
-       "13     Turkey     21\n",
-       "14      Japan     21"
+       "13       Iran     21\n",
+       "14     Turkey     21"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2785,7 +2785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -2832,7 +2832,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>John le Carré</td>\n",
-       "      <td>12</td>\n",
+       "      <td>14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -2851,12 +2851,12 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>David Omand</td>\n",
+       "      <td>Stalin</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>Stalin</td>\n",
+       "      <td>David Omand</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2871,22 +2871,22 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
-       "      <td>Gen Hayden</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>Gorbachev</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
        "      <td>David Priess</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14</th>\n",
+       "      <th>12</th>\n",
        "      <td>Edward Snowden</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Gen Hayden</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Christopher Andrew</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -2894,25 +2894,25 @@
        "</div>"
       ],
       "text/plain": [
-       "               PERSON  count\n",
-       "0      Vladimir Putin     52\n",
-       "1        Adolf Hitler     18\n",
-       "2   Winston Churchill     16\n",
-       "3       John le Carré     12\n",
-       "4           Joe Biden     11\n",
-       "5      Michael Morell      9\n",
-       "6     Loch K. Johnson      9\n",
-       "7         David Omand      7\n",
-       "8              Stalin      7\n",
-       "9                Bush      6\n",
-       "10         James Bond      6\n",
-       "11         Gen Hayden      5\n",
-       "12          Gorbachev      5\n",
-       "13       David Priess      5\n",
-       "14     Edward Snowden      5"
+       "                PERSON  count\n",
+       "0       Vladimir Putin     52\n",
+       "1         Adolf Hitler     18\n",
+       "2    Winston Churchill     16\n",
+       "3        John le Carré     14\n",
+       "4            Joe Biden     11\n",
+       "5       Michael Morell      9\n",
+       "6      Loch K. Johnson      9\n",
+       "7               Stalin      7\n",
+       "8          David Omand      7\n",
+       "9                 Bush      6\n",
+       "10          James Bond      6\n",
+       "11        David Priess      5\n",
+       "12      Edward Snowden      5\n",
+       "13          Gen Hayden      5\n",
+       "14  Christopher Andrew      5"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2949,7 +2949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -2981,7 +2981,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>CIA</td>\n",
-       "      <td>152</td>\n",
+       "      <td>153</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -2996,7 +2996,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>FBI</td>\n",
-       "      <td>23</td>\n",
+       "      <td>25</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -3005,17 +3005,17 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>British Intelligence</td>\n",
-       "      <td>17</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
        "      <td>Allied</td>\n",
        "      <td>17</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
+       "      <th>6</th>\n",
        "      <td>NSA</td>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>British Intelligence</td>\n",
        "      <td>17</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -3050,7 +3050,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
-       "      <td>BBC</td>\n",
+       "      <td>the Intelligence Community</td>\n",
        "      <td>9</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -3059,24 +3059,24 @@
       ],
       "text/plain": [
        "                                      ORG  count\n",
-       "0                                     CIA    152\n",
+       "0                                     CIA    153\n",
        "1                                     KGB     32\n",
        "2                                     SIS     26\n",
-       "3                                     FBI     23\n",
+       "3                                     FBI     25\n",
        "4                          Foreign Office     18\n",
-       "5                    British Intelligence     17\n",
-       "6                                  Allied     17\n",
-       "7                                     NSA     17\n",
+       "5                                  Allied     17\n",
+       "6                                     NSA     17\n",
+       "7                    British Intelligence     17\n",
        "8   Schar School of Policy and Government     16\n",
        "9            Joint Intelligence Committee     16\n",
        "10                                    SOE     15\n",
        "11                                   NATO     14\n",
        "12                                     AI     12\n",
        "13                  Intelligence Services     10\n",
-       "14                                    BBC      9"
+       "14             the Intelligence Community      9"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3118,7 +3118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
