--- a/all_items.ipynb
+++ b/all_items.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -236,13 +236,16 @@
          "hovertemplate": "Country=%{location}<br>Count=%{z}<extra></extra>",
          "locationmode": "country names",
          "locations": [
-          "United Kingdom",
+          "UK",
+          "Netherlands",
           "Ukraine",
+          "Japan",
+          "Chile",
+          "China",
+          "United Kingdom",
           "Australia",
           "Germany",
           "Sweden",
-          "Japan",
-          "China",
           "Brazil",
           "Canada",
           "New Zealand",
@@ -251,7 +254,6 @@
           "Israel",
           "Antarctica",
           "Russia",
-          "UK",
           "Oman",
           "Romania",
           "Greece",
@@ -296,7 +298,6 @@
           "Singapore",
           "Indonesia",
           "Kuwait",
-          "Netherlands",
           "United Arab Emirates",
           "Argentina",
           "Uruguay",
@@ -309,19 +310,21 @@
           "Philippines",
           "Gibraltar",
           "Nepal",
-          "Chile",
           "Albania"
          ],
          "name": "",
          "type": "choropleth",
          "z": [
+          205,
+          2,
+          92,
+          22,
+          2,
+          13,
           6,
-          91,
           22,
           28,
           5,
-          21,
-          11,
           6,
           14,
           9,
@@ -330,7 +333,6 @@
           30,
           1,
           62,
-          204,
           14,
           2,
           3,
@@ -376,11 +378,9 @@
           1,
           1,
           1,
-          1,
           2,
           1,
           2,
-          1,
           1,
           1,
           1,
@@ -1298,7 +1298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1330,7 +1330,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>UK</td>\n",
-       "      <td>204</td>\n",
+       "      <td>205</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1340,7 +1340,7 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Ukraine</td>\n",
-       "      <td>91</td>\n",
+       "      <td>92</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1389,9 +1389,9 @@
       ],
       "text/plain": [
        "            Country  Count\n",
-       "0                UK    204\n",
+       "0                UK    205\n",
        "1     United States    174\n",
-       "2           Ukraine     91\n",
+       "2           Ukraine     92\n",
        "3            Russia     62\n",
        "4            Israel     30\n",
        "..              ...    ...\n",
@@ -1404,7 +1404,7 @@
        "[75 rows x 2 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1416,7 +1416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -1438,65 +1438,65 @@
           "Russia",
           "Israel",
           "Germany",
-          "Australia",
           "Japan",
+          "Australia",
           "Iraq",
-          "Canada",
           "Oman",
+          "Canada",
           "Ireland",
           "India",
           "France",
           "China",
-          "New Zealand",
-          "Turkey",
           "Egypt",
+          "Turkey",
+          "New Zealand",
           "Cuba",
           "Brazil",
           "Cyprus",
           "Austria",
-          "Pakistan",
           "United Kingdom",
-          "Afghanistan",
+          "Pakistan",
           "South Africa",
+          "Afghanistan",
           "Sweden",
           "Spain",
           "Denmark",
           "Serbia",
+          "Sudan",
           "Sri Lanka",
+          "Italy",
           "Nigeria",
           "Niger",
           "Slovakia",
           "Greece",
-          "Sudan",
-          "South Sudan",
-          "Mali",
           "Singapore",
-          "Italy",
-          "Finland",
-          "Argentina",
+          "Mali",
+          "South Sudan",
+          "Chile",
           "Norway",
-          "Uganda",
-          "Colombia",
           "Romania",
+          "Uganda",
+          "Argentina",
+          "Colombia",
+          "Netherlands",
+          "Finland",
           "Belgium",
           "Uruguay",
-          "Morocco",
-          "Algeria",
-          "Georgia",
-          "Netherlands",
-          "Hong Kong",
-          "Myanmar",
-          "Philippines",
-          "Gibraltar",
           "Nepal",
-          "Chile",
           "United Arab Emirates",
-          "Somalia",
+          "Myanmar",
+          "Algeria",
+          "Gibraltar",
           "Kuwait",
+          "Morocco",
+          "Philippines",
+          "Hong Kong",
+          "Georgia",
+          "Dominican Republic",
           "Indonesia",
           "Latvia",
           "Poland",
-          "Dominican Republic",
+          "Somalia",
           "Dominica",
           "Antarctica",
           "Switzerland",
@@ -1511,21 +1511,21 @@
          "name": "",
          "type": "choropleth",
          "z": [
-          204,
+          205,
           174,
-          91,
+          92,
           62,
           30,
           28,
           22,
-          21,
+          22,
           17,
           14,
           14,
           14,
           13,
           13,
-          11,
+          13,
           9,
           9,
           9,
@@ -1558,8 +1558,8 @@
           2,
           2,
           2,
-          1,
-          1,
+          2,
+          2,
           1,
           1,
           1,
@@ -2494,7 +2494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2511,7 +2511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2523,7 +2523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -2564,7 +2564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2585,7 +2585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2599,7 +2599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2611,7 +2611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -2643,17 +2643,17 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>USA</td>\n",
-       "      <td>375</td>\n",
+       "      <td>379</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>UK</td>\n",
-       "      <td>279</td>\n",
+       "      <td>282</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Russia</td>\n",
-       "      <td>185</td>\n",
+       "      <td>186</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -2677,22 +2677,22 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
+       "      <td>China</td>\n",
+       "      <td>40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
        "      <td>London</td>\n",
        "      <td>39</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
+       "      <th>9</th>\n",
        "      <td>Canada</td>\n",
        "      <td>36</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>France</td>\n",
-       "      <td>36</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>10</th>\n",
-       "      <td>China</td>\n",
+       "      <td>France</td>\n",
        "      <td>36</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2707,12 +2707,12 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
-       "      <td>Iran</td>\n",
-       "      <td>21</td>\n",
+       "      <td>Japan</td>\n",
+       "      <td>23</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
-       "      <td>Turkey</td>\n",
+       "      <td>Iran</td>\n",
        "      <td>21</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -2721,24 +2721,24 @@
       ],
       "text/plain": [
        "          GPE  count\n",
-       "0         USA    375\n",
-       "1          UK    279\n",
-       "2      Russia    185\n",
+       "0         USA    379\n",
+       "1          UK    282\n",
+       "2      Russia    186\n",
        "3     Ukraine    152\n",
        "4     Germany     67\n",
        "5      Israel     42\n",
        "6        Iraq     41\n",
-       "7      London     39\n",
-       "8      Canada     36\n",
-       "9      France     36\n",
-       "10      China     36\n",
+       "7       China     40\n",
+       "8      London     39\n",
+       "9      Canada     36\n",
+       "10     France     36\n",
        "11  Australia     26\n",
        "12     Moscow     24\n",
-       "13       Iran     21\n",
-       "14     Turkey     21"
+       "13      Japan     23\n",
+       "14       Iran     21"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2785,7 +2785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -2841,22 +2841,22 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>Michael Morell</td>\n",
-       "      <td>9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
        "      <td>Loch K. Johnson</td>\n",
        "      <td>9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Michael Morell</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>Stalin</td>\n",
+       "      <td>David Omand</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>David Omand</td>\n",
+       "      <td>Stalin</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2871,17 +2871,17 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
-       "      <td>David Priess</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
        "      <td>Edward Snowden</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Gorbachev</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>13</th>\n",
-       "      <td>Gen Hayden</td>\n",
+       "      <td>Johnson</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2900,19 +2900,19 @@
        "2    Winston Churchill     16\n",
        "3        John le Carré     14\n",
        "4            Joe Biden     11\n",
-       "5       Michael Morell      9\n",
-       "6      Loch K. Johnson      9\n",
-       "7               Stalin      7\n",
-       "8          David Omand      7\n",
+       "5      Loch K. Johnson      9\n",
+       "6       Michael Morell      9\n",
+       "7          David Omand      7\n",
+       "8               Stalin      7\n",
        "9                 Bush      6\n",
        "10          James Bond      6\n",
-       "11        David Priess      5\n",
-       "12      Edward Snowden      5\n",
-       "13          Gen Hayden      5\n",
+       "11      Edward Snowden      5\n",
+       "12           Gorbachev      5\n",
+       "13             Johnson      5\n",
        "14  Christopher Andrew      5"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2949,7 +2949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -2981,7 +2981,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>CIA</td>\n",
-       "      <td>153</td>\n",
+       "      <td>157</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -3005,7 +3005,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>Allied</td>\n",
+       "      <td>British Intelligence</td>\n",
        "      <td>17</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -3015,17 +3015,17 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>British Intelligence</td>\n",
+       "      <td>Allied</td>\n",
        "      <td>17</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>Schar School of Policy and Government</td>\n",
+       "      <td>Joint Intelligence Committee</td>\n",
        "      <td>16</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>Joint Intelligence Committee</td>\n",
+       "      <td>Schar School of Policy and Government</td>\n",
        "      <td>16</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -3050,8 +3050,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
-       "      <td>the Intelligence Community</td>\n",
-       "      <td>9</td>\n",
+       "      <td>Congress</td>\n",
+       "      <td>10</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -3059,24 +3059,24 @@
       ],
       "text/plain": [
        "                                      ORG  count\n",
-       "0                                     CIA    153\n",
+       "0                                     CIA    157\n",
        "1                                     KGB     32\n",
        "2                                     SIS     26\n",
        "3                                     FBI     25\n",
        "4                          Foreign Office     18\n",
-       "5                                  Allied     17\n",
+       "5                    British Intelligence     17\n",
        "6                                     NSA     17\n",
-       "7                    British Intelligence     17\n",
-       "8   Schar School of Policy and Government     16\n",
-       "9            Joint Intelligence Committee     16\n",
+       "7                                  Allied     17\n",
+       "8            Joint Intelligence Committee     16\n",
+       "9   Schar School of Policy and Government     16\n",
        "10                                    SOE     15\n",
        "11                                   NATO     14\n",
        "12                                     AI     12\n",
        "13                  Intelligence Services     10\n",
-       "14             the Intelligence Community      9"
+       "14                               Congress     10"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3118,7 +3118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
